--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "randomseqgenerator-main",
+  "version": "1.0.0",
+  "main": "main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
     "@xata.io/client": "^0.30.1"
   }
